--- a/Backend/package.json
+++ b/Backend/package.json
@@ -17,6 +17,7 @@
     "canvas": "^3.2.0",
     "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^4.21.2",
     "face-api.js": "^0.20.0",
