--- a/Backend/package.json
+++ b/Backend/package.json
@@ -19,6 +19,7 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
+    "ethers": "^6.15.0",
     "express": "^4.21.2",
     "face-api.js": "^0.20.0",
     "jsonwebtoken": "^9.0.2",
