--- a/Backend/package.json
+++ b/Backend/package.json
@@ -26,6 +26,7 @@
     "mongodb": "^6.19.0",
     "mongoose": "^8.18.0",
     "multer": "^2.0.2",
+    "node-cron": "^4.2.1",
     "nodemon": "^3.1.10",
     "twilio": "^5.8.0"
   }
